MINIFICPP-1293 Fix the failing PropertyTests

Instead of using mktime and adjusting by the time zone offset, use
_mkgmtime on Windows where it is available, and a hand-written version
of mkgmtime elsewhere.